styles/blog.css
:root {
  --main-inline-size: min(80ch, 100%);
  --header-block-size: 4rem;
  --padding-inline: clamp(1rem, 6vw, 4rem);
  --body-gap: clamp(4rem, 6vw, 8rem);
  --nav-inline-size: 32ch;
  --nav-padding-inline-end: 2rem;
  --nav-total-inline-size: calc(
    var(--nav-inline-size) + var(--padding-inline) +
      var(--nav-padding-inline-end)
  );
  --nav-font-size: 0.875rem;
  --nav-items-gap: 1.5rem;
  --header-offset: 4rem;
  --footer-offset: 4rem;
  --paragraph-spacing: 1rem;
}

body {
  display: flex;
  block-size: 100vh;
  box-sizing: border-box;
  font-size: 0.875rem;
  gap: var(--body-gap);
}

#nav {
  flex: 0 0 var(--nav-inline-size);
  font-size: var(--nav-font-size);
  padding-block: var(--header-block-size) var(--padding-inline);
  padding-inline: var(--padding-inline) var(--nav-padding-inline-end);
  overflow-y: auto;
  -webkit-user-select: none;
  user-select: none;
}

#nav-toggle {
  display: none;
}

#nav-toggle + label {
  display: none;
  cursor: pointer;
}

#nav-logo {
  display: none;
}

#nav-content {
  display: flex;
  flex-direction: column;
  gap: calc(var(--header-offset) - var(--nav-font-size) * var(--line-height));
}

.nav-links {
  display: flex;
  flex-direction: column;
  gap: var(--nav-items-gap);
}

.nav-link {
  text-transform: lowercase;
}

.nav-pages {
  display: flex;
  flex-direction: column;
  gap: var(--nav-items-gap);
}

.nav-item > a {
  text-decoration: none;
  color: var(--color-text-muted);
}

.nav-item > a:hover {
  text-decoration: underline;
  color: inherit;
}

.nav-item > a[aria-current] {
  font-weight: 600;
}

.nav-item .date {
  color: var(--color-text);
}

.nav-item .title {
  font-style: italic;
}

.nav-item .tags {
  font-size: 0.75rem;
}

.tag {
  font-weight: 500;
  text-transform: lowercase;
  text-decoration: none;
  color: var(--color-text-muted);
}

.tag::before {
  content: "#";
}

.tag:hover {
  text-decoration: underline;
  color: var(--color-text);
}

main {
  flex: 1 0 0;
  padding-block-end: 2rem;
  padding-inline-end: var(--padding-inline);
  overflow-x: hidden;
  overflow-y: auto;
  scroll-behavior: smooth;
  scroll-padding-block-start: var(--header-block-size);
  display: flex;
  flex-direction: column;
}

main > * {
  margin-inline-start: auto;
  margin-inline-end: auto;
  padding-inline-end: var(--nav-total-inline-size);
}

header {
  flex: 0 0 auto;
  inline-size: var(--main-inline-size);
  block-size: var(--header-block-size);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-block-end: var(--header-offset);
}

.logo {
  font-size: 2rem;
  font-family: "Iosevka SS14 Web";
  color: var(--color-text);
  font-weight: 200;
  text-transform: lowercase;
  text-align: center;
  white-space: nowrap;
  -webkit-user-select: none;
  user-select: none;
}

#content {
  flex-grow: 1;
  inline-size: var(--main-inline-size);
  display: flex;
  flex-direction: column;
}

article {
  display: flex;
  flex-direction: column;
  gap: var(--paragraph-spacing);
  overflow-wrap: break-word;
}

article li + li {
  margin-block-start: var(--paragraph-spacing);
}

article li > * + * {
  margin-block-start: var(--paragraph-spacing);
}

article aside {
  border-radius: 0.5rem;
  background-color: var(--color-surface);
  padding: 1rem;
}

article figure img {
  inline-size: 100%;
}

article figure figcaption {
  margin-block-start: 0.5rem;
}

article .heading {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

article .heading .date {
  font-size: 0.875rem;
  font-weight: 500;
  color: var(--color-text-muted);
  -webkit-user-select: none;
  user-select: none;
}

article .footnotes-list {
  list-style-position: inside;
  padding-inline-start: 0;
}

article .footnotes-list .footnote-item > *:first-of-type {
  display: inline;
}

#navigation {
  flex: 0 0 auto;
  margin-block-start: 6rem;
  max-inline-size: 100%;
  -webkit-user-select: none;
  user-select: none;
}

.navigation-link {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  min-inline-size: 0;
}

.navigation-link-icon {
  color: var(--color-text-muted);
  flex: 0 0 auto;
}

.navigation-link-title {
  display: -webkit-inline-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  color: var(--color-text-muted);
  flex: 1;
}

.navigation-link:hover .navigation-link-icon {
  color: var(--color-text);
}

.navigation-link:hover .navigation-link-title {
  text-decoration: underline;
  color: var(--color-text);
}

.navigation-link:hover + #navigation-prev-icon {
  color: var(--color-text);
}

#navigation-prev {
  grid-area: prev;
  text-align: start;
}

#navigation-next {
  grid-area: next;
  text-align: end;
}

footer {
  flex: 0 0 auto;
  inline-size: var(--main-inline-size);
  margin-block-start: var(--footer-offset);
  color: var(--color-text-muted);
  text-align: center;
  -webkit-user-select: none;
  user-select: none;
}

table {
  display: block;
  border-collapse: collapse;
  inline-size: 100%;
  overflow-x: auto;
}

th,
td {
  padding: 0.5rem;
  border: 0.1px solid var(--color-text);
}

th {
  text-align: start;
  font-weight: 400;
  background-color: var(--color-surface);
}

pre code.hljs {
  border-radius: 0.5rem;
  background-color: var(--color-surface);
}

@media screen and (max-width: 768px) {
  :root {
    --body-gap: 2rem;
  }

  body {
    flex-direction: column;
    overflow-y: auto;
    scroll-behavior: smooth;
    scroll-padding-block-start: var(--padding-inline);
    gap: 2rem;
  }

  #nav {
    flex: 0 0 auto;
    overflow-y: unset;
    padding-block: var(--padding-inline);
    padding-inline: var(--padding-inline);
    display: grid;
    grid-template-columns: 2rem 1fr 2rem;
    grid-template-areas: "action logo ." "content content content";
    column-gap: 1rem;
  }

  #nav-toggle + label {
    grid-area: action;
    display: flex;
    align-items: center;
  }

  #nav-toggle:not(:checked) ~ #nav-content {
    display: none;
  }

  #nav-logo {
    grid-area: logo;
    display: unset;
    font-size: clamp(1.5rem, 6vw, 2rem);
  }

  #nav-content {
    grid-area: content;
    margin-block-start: 3rem;
  }

  main {
    overflow-x: unset;
    overflow-y: unset;
    padding-block: var(--padding-inline);
    padding-inline: var(--padding-inline);
  }

  main > * {
    padding-inline-end: 0;
  }

  header {
    display: none;
  }
}

